# horus

./: .clang-format  .clang-format-ignore  .clang-tidy  .clangd  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  meson.build  meson_options.txt  xmake.lua
.github/workflows/: ci.yml  linux.yml  windows.yml
assets/: xmake.lua
assets/shaders/: default.slang  triangle.slang  unlit.slang
horus/: meson.build  xmake.lua
horus/include/: meson.build
horus/include/horus/: config.h.in  definitions.h  horus.h
horus/include/horus/application/: application.h  configuration.h  version.h
horus/include/horus/camera/: camera.h
horus/include/horus/containers/: array.h  common.h  hash_map.h  linked_list.h  list.h
horus/include/horus/core/: assert.h  hash.h  macros.h  numeric.h  strings.h  types.h
horus/include/horus/events/: base.h  events.h  keyboard.h  mouse.h
horus/include/horus/input/: keyboard.h  mouse.h
horus/include/horus/logger/: ansi.h  logger.h
horus/include/horus/math/: matrix.h  quaternion.h  vector.h
horus/include/horus/platform/: console.h  debugger.h  detection.h  entrypoint.h  filesystem.h  memory.h  time.h  window.h
horus/include/horus/platform/input/: keyboard.h  mouse.h
horus/include/horus/platform/linux/: entrypoint.h  window.h
horus/include/horus/platform/linux/input/: keyboard.h  mouse.h
horus/include/horus/platform/windows/: entrypoint.h  window.h  windows.h
horus/include/horus/platform/windows/input/: keyboard.h  mouse.h
horus/include/horus/renderer/: general.h  material.h  pipeline.h  renderer.h  shader.h  texture.h
horus/include/horus/renderer/buffers/: index.h  instance.h  uniform.h  vertex.h
horus/include/horus/renderer/opengl/: debug.h  pipeline.h  platform.h  renderer.h  shader.h  texture.h
horus/include/horus/renderer/opengl/buffers/: index.h  instance.h  uniform.h  vertex.h
horus/include/horus/renderer/opengl/glad/: egl.h  gl.h  wgl.h
horus/include/horus/renderer/textures/: texture.h
horus/include/horus/renderer/vulkan/: command.h  debug.h  descriptors.h  device.h  image.h  instance.h  loader.h  pipeline.h  platform.h  renderer.h  shader.h  swapchain.h  synchronization.h  texture.h
horus/include/horus/renderer/vulkan/buffers/: index.h  instance.h  uniform.h  vertex.h
horus/include/horus/renderer/vulkan/textures/: texture.h
horus/include/horus/types/: vertex.h
horus/source/: definitions.c
horus/source/application/: application.c
horus/source/camera/: camera.c
horus/source/containers/: array.c  hash_map.c  linked_list.c  list.c
horus/source/core/: hash.c  numeric.c
horus/source/input/: keyboard.c  mouse.c
horus/source/logger/: logger.c
horus/source/math/: matrix.c  quaternion.c  vector.c
horus/source/platform/linux/: filesystem.c  memory.c  time.c  window.c
horus/source/platform/linux/input/: keyboard.c  mouse.c
horus/source/platform/windows/: console.c  filesystem.c  time.c  window.c
horus/source/platform/windows/input/: keyboard.c  mouse.c
horus/source/renderer/: material.c  renderer.c  texture.c
horus/source/renderer/opengl/: debug.c  pipeline.c  renderer.c  shader.c  texture.c
horus/source/renderer/opengl/buffers/: index.c  instance.c  uniform.c  vertex.c
horus/source/renderer/opengl/glad/: egl.c  gl.c  wgl.c
horus/source/renderer/opengl/linux/: platform.c
horus/source/renderer/opengl/windows/: platform.c
horus/source/renderer/vulkan/: command.c  debug.c  descriptors.c  device.c  image.c  instance.c  loader.c  pipeline.c  renderer.c  shader.c  swapchain.c  synchronization.c  texture.c
horus/source/renderer/vulkan/buffers/: index.c  instance.c  uniform.c  vertex.c
horus/source/renderer/vulkan/linux/: platform.c
horus/source/renderer/vulkan/textures/: texture.c
horus/source/renderer/vulkan/windows/: platform.c
horus/src/: definitions.c
horus/src/application/: application.c
horus/src/containers/: array.c
horus/src/core/: strings.c
horus/src/events/: base.c  mouse.c
horus/src/input/: keyboard.c  mouse.c
horus/src/logger/: logger.c
horus/src/platform/linux/: console.c  entrypoint.c  memory.c  time.c  window.c
horus/src/platform/linux/input/: keyboard.c  mouse.c
horus/src/platform/windows/: window.c
horus/src/platform/windows/input/: keyboard.c  mouse.c
horus/src/renderer/: general.c
horus/src/renderer/vulkan/: instance.c  renderer.c
horus/src/renderer/vulkan/linux/: platform.c
horus/src/renderer/vulkan/windows/: platform.c
meson/: linux.txt  windows.txt
sandbox/: meson.build  xmake.lua
sandbox/include/sandbox/: sandbox.h
sandbox/source/: sandbox.c
sandbox/src/: sandbox.c
scripts/: assets.sh  changelog.sh  setup.sh
scripts/hooks/: pre-commit.sh
subprojects/: cglm.wrap  cmocka.wrap  vulkan-memory-allocator.wrap
tests/: meson.build  xmake.lua
tests/containers/: array.c  hash_map.c  linked_list.c  list.c  meson.build  xmake.lua
tests/core/: hash.c  meson.build  strings.c  xmake.lua
tests/math/: matrix.c  meson.build  quaternion.c  vector.c  xmake.lua
xmake/: xmake.lua
